--- a/dcx_unified/configs/covid.yaml
+++ b/dcx_unified/configs/covid.yaml
@@ -1,4 +1,5 @@
 name: "lung2covid"
+module_type: "lung_based"
 checkpoint_path: "checkpoints/lung2covid.pth"
 loadSize: 2048
 threshold: -950
@@ -6,8 +7,7 @@ output_range: [-1100, -400]
 calculate_area: true
 use_connected_regions: false
 normalization_method: "minmax"
-input_min: -1200
-input_max: 200
-output_min: -550
-output_max: -450
+input_min: -1100
+input_max: -500
 requires_lung_mask: true
+interpolation: "LANCZOS"
